--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,17 @@ jdk:
 before_script:
   - chmod +x gradlew
 
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
 script:
   - ./gradlew clean test
   - ./gradlew jacocoTestReport
-
-cache:
-  directories:
-    - $HOME/.m2
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
